# omniedge-python

./: .genignore  .gitignore  LICENSE  PUBLISH.md  README.md  USAGE.md  gen.yaml  main.py  pyproject.toml
.github/workflows/: sdk-generation.yml  sdk-publish.yml  sdk-test.yml
.speakeasy/: workflow.yaml
docs/: cli-dev-guide.md
omniedge/: __init__.py  cli.py  terminal.py
omniedge/tools/: claude_code.py
openapi/: omniedge.yaml
openapi/components/schemas/: chat.yaml  error.yaml  model.yaml
openapi/paths/: chat.yaml  model.yaml
src/omniedge/: __init__.py  _base_client.py  _client.py  _constants.py  _exceptions.py  errors.py  models.py
src/omniedge/resources/chat/: __init__.py  chat.py  completions.py
src/omniedge/types/chat/: __init__.py  chat_completion.py
tests/: test_chat_completions.py  test_client.py
tests/chat/: test_completions.py
