[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniedge"
version = "0.2.5"
description = "The official Python library for the OmniEdge API"
readme = "README.md"
requires-python = ">=3.9.2"
license = {text = "MIT"}

authors = [
    {name = "edgefn"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]

[project.urls]
Homepage = "https://github.com/edgefn/omniedge-python"
Repository = "https://github.com/edgefn/omniedge-python"
Issues = "https://github.com/edgefn/omniedge-python/issues"

[project.scripts]
omniedge = "omniedge.cli:main"


[dependency-groups]
test = [
    "pytest",
    "pytest-asyncio",
]
dev = [
    "mypy ==1.15.0",
    "pylint ==3.2.3",
    "pyright ==1.1.398",
]


#[tool.setuptools]
#packages = ["omniedge", "omniedge.tools"]

[tool.setuptools.packages.find]
where = ["src"]

# --- 新增区域：确保 py.typed 被打包 (来自文件2) ---
# 这对于让使用你库的用户能获得 IDE 代码提示至关重要
[tool.setuptools.package-data]
"*" = ["py.typed"]

# --- 新增区域：Pytest---
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

# --- 新增区域：Type Checking---
[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"

